--- a/src/app/mizuxe/mizuxe.component.html
+++ b/src/app/mizuxe/mizuxe.component.html
@@ -244,4 +244,225 @@
       </div>
     </div>
   </section>
+  <!--Authors-->
+  <section id="authors" class="my-5 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header mb-5">
+            <h1 class="text-primary pb-3">
+              Meet The Authors
+            </h1>
+            <p class="lead">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora
+              totam porro dicta dignissimos amet deserunt quod facere
+              perspiciatis minima harum.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img
+                src="../../assets/img/person1.jpg"
+                alt=""
+                class="img-fluid rounded-circle w-50 mb-3"
+              />
+              <h3>Susan Williams</h3>
+              <h5 class="text-muted">Lead Writer</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                perspiciatis dolore corporis voluptatibus sunt provident!
+              </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fa fa-facebook-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img
+                src="../../assets/img/person2.jpg"
+                alt=""
+                class="img-fluid rounded-circle w-50 mb-3"
+              />
+              <h3>Grace Smith</h3>
+              <h5 class="text-muted">Co-Writer</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                perspiciatis dolore corporis voluptatibus sunt provident!
+              </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fa fa-facebook-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img
+                src="../../assets/img/person3.jpg"
+                alt=""
+                class="img-fluid rounded-circle w-50 mb-3"
+              />
+              <h3>John Doe</h3>
+              <h5 class="text-muted">Editor</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                perspiciatis dolore corporis voluptatibus sunt provident!
+              </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fa fa-facebook-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img
+                src="../../assets/img/person4.jpg"
+                alt=""
+                class="img-fluid rounded-circle w-50 mb-3"
+              />
+              <h3>Kevin Swanson</h3>
+              <h5 class="text-muted">Designer</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                perspiciatis dolore corporis voluptatibus sunt provident!
+              </p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="http://facebook.com">
+                    <i class="fa fa-facebook-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://twitter.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="http://instagram.com">
+                    <i class="fa fa-twitter-square"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--contact-->
+  <section id="contact" class="bg-light py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9">
+          <h3>Get In Touch</h3>
+          <p class="lead">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
+            earum.
+          </p>
+          <form>
+            <div class="input-group input-group-lg mb-3">
+              <div class="input-group-append">
+                <span class="input-group-text">
+                  <i class="fa fa-user px-1"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                class="form-control form-control-lg"
+                placeholder="Name"
+              />
+            </div>
+            <div class="input-group input-group-lg mb-3">
+              <div class="input-group-append">
+                <span class="input-group-text">
+                  <i class="fa fa-envelope"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                class="form-control form-control-md"
+                placeholder="Email"
+              />
+            </div>
+            <div class="input-group input-group-lg mb-3">
+              <div class="input-group-append">
+                <span class="input-group-text">
+                  <i class="fa fa-pencil"></i>
+                </span>
+              </div>
+              <textarea
+                class="form-control form-control-md"
+                placeholder="Message"
+                rows="6"
+              ></textarea>
+            </div>
+            <div class="input-group input-group-lg mb-3">
+              <button class="btn btn-primary btn-lg btn-block">Submit</button>
+            </div>
+          </form>
+        </div>
+        <div class="col-lg-3 align-self-center">
+          <img src="../../assets/img/mlogo.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--footer-->
+  <footer id="main-footer" class="py-5 bg-primary text-white">
+    <div class="col-md-6 ml-auto">
+      <p class="lead">Copyright &copy; {{ year }}</p>
+    </div>
+  </footer>
 </div>
